<resources>    <string name="app_name">Diary Application</string>    <!-- TODO: Remove or change this placeholder text -->    <string name="hello_blank_fragment">Hello blank fragment</string>    <string name="add_project">add project</string>    <string name="project_button">project_button</string>    <string name="project_name">project_name</string>    <string name="hangout">Hangout</string>    <string name="life">Life</string>    <string name="worth">Worth</string>    <string name="area">Area :</string>    <string name="money">Money</string>    <string name="health">Health</string>    <string name="status">Status :</string>    <string name="ongoing">Ongoing</string>    <string name="done">Done</string>    <string name="hold">Hold</string>    <string name="create">Create</string>    <string name="end_date">End Date</string>    <string name="start_date">Start Date</string>    <string name="rapport">Rapport</string>    <string name="save">Save</string>    <string name="age">age</string>    <string name="sample_date">1.1.2018</string>    <string name="tags">tags</string>    <string name="tags_example">eLearning, Rapport</string>    <string name="comment">comment</string>    <string name="add_entry">Add Entry</string>    <string name="enter_entry_name">Enter Entry Name</string>    <string name="entry_name">Entry Name</string>    <string name="duration">Duration</string>    <string name="sample_duration">12:30 PM - 1:30 PM</string>    <string name="sample_time">4.2</string>    <string name="marker">Marker</string>    <string name="note">Note</string>    <string name="time">Time</string>    <string name="from">From : </string>    <string name="to">To : </string>    <string name="sample_time_example">12:30 PM</string>    <string name="date">Date</string>    <string name="add">ADD</string>    <string name="projects">Projects</string>    <string name="star_image">star_image</string>    <string name="new_image">New Image</string>    <string name="flag_image">Flag Image</string>    <string name="no_data">NO DATA</string>    <string name="today">Today</string>    <string name="backup">BackUp</string></resources>