<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/projectlist_area_chipgroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.chip.Chip
                android:id="@+id/life_chipButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/life"
                style="@style/Widget.MaterialComponents.Chip.Filter"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/worth_chipButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/worth"
                style="@style/Widget.MaterialComponents.Chip.Filter"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/money_chipButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money"
                style="@style/Widget.MaterialComponents.Chip.Filter"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/health_chipButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health"
                style="@style/Widget.MaterialComponents.Chip.Filter"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/hangout_chip_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hangout"
                android:layout_marginEnd="16dp"
                style="@style/Widget.MaterialComponents.Chip.Filter"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/ongoing_chip_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ongoing"
                android:layout_marginEnd="16dp"
                style="@style/Widget.MaterialComponents.Chip.Filter"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/done_chip_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:layout_marginEnd="16dp"
                style="@style/Widget.MaterialComponents.Chip.Filter"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/hold_chip_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hold"
                android:layout_marginEnd="16dp"
                style="@style/Widget.MaterialComponents.Chip.Filter"/>
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addProjectFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/add_project"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/project_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/projectlist_area_chipgroup"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="3"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>