<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="project"
            type="com.example.diaryapplication.model.Project" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/projectDetailsRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_bright"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/projectDetailsStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:padding="8dp"
                android:text="@string/status" />

            <TextView
                android:id="@+id/projectDetailsAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="8dp"
                android:text="@string/age"
                android:layout_marginEnd="16dp"/>
        </RelativeLayout>

        <com.mikhaellopez.circleview.CircleView
            android:id="@+id/project_circleView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:projectColor="@{project.color}"
            app:cv_color="@android:color/holo_green_light"
            app:cv_shadow="true"
            app:cv_shadow_color="@android:color/holo_green_light"
            app:cv_shadow_radius="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/projectDetailsRelativeLayout" />

        <TextView
            android:id="@+id/entryDetailsProjectName"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@{project.name}"
            tools:text="@string/project_name"
            app:layout_constraintBottom_toBottomOf="@+id/project_circleView"
            app:layout_constraintStart_toEndOf="@+id/project_circleView"
            app:layout_constraintTop_toTopOf="@+id/project_circleView" />

        <TextView
            android:id="@+id/projectDetailsStartDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/start_date"
            app:layout_constraintStart_toStartOf="@+id/entryDetailsDuration"
            app:layout_constraintTop_toBottomOf="@+id/project_circleView" />

        <TextView
            android:id="@+id/entryDetailsDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="8dp"
            app:dateFormat="@{project.startDate}"
            tools:text="@string/sample_date"
            style="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/projectDetailsStartDateTitle" />

        <TextView
            android:id="@+id/projectDetailsEndDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:padding="8dp"
            android:text="@string/end_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/projectDetailsStartDateTitle"
            app:layout_constraintTop_toTopOf="@+id/projectDetailsStartDateTitle" />

        <TextView
            android:id="@+id/projectDetailsEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:dateFormat="@{project.endDate}"
            tools:text="@string/sample_date"
            style="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintBottom_toBottomOf="@+id/entryDetailsDuration"
            app:layout_constraintStart_toStartOf="@+id/projectDetailsEndDateTitle" />


        <TextView
            android:id="@+id/entryDetailsMarkerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/area"
            app:layout_constraintStart_toStartOf="@+id/projectDetailsArea"
            app:layout_constraintTop_toBottomOf="@+id/entryDetailsDuration" />

        <TextView
            android:id="@+id/projectDetailsArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="8dp"
            android:text="@{project.area}"
            tools:text="@string/money"
            style="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entryDetailsMarkerTitle" />

        <TextView
            android:id="@+id/projectDetailsTagTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/tags"
            app:layout_constraintStart_toStartOf="@+id/projectDetailsTag"
            app:layout_constraintTop_toBottomOf="@+id/projectDetailsArea" />

        <TextView
            android:id="@+id/projectDetailsTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="8dp"
            android:text="@string/tags_example"
            style="@style/TextAppearance.MaterialComponents.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/projectDetailsTagTitle" />

        <TextView
            android:id="@+id/projectDetailsCommentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/comment"
            app:layout_constraintStart_toStartOf="@+id/projectDetailsComment"
            app:layout_constraintTop_toBottomOf="@+id/projectDetailsTag" />

        <TextView
            android:id="@+id/projectDetailsComment"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:text="@{project.comment}"
            tools:text="@string/tags_example"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/projectDetailsCommentTitle" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/projectDetailsFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/add_project"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>