<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="entry"
            type="com.example.diaryapplication.model.Entry" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relative_color_project"
            android:layout_width="2dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_red_dark"
            app:entryColor="@{entry.projectColor}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/entry_date_project"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            app:dateFormat="@{entry.startDate}"
            app:layout_constraintStart_toStartOf="@id/relative_color_project"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sample_date" />

        <TextView
            android:id="@+id/entry_name_project"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@{entry.name}"
            app:layout_constraintStart_toStartOf="@id/relative_color_project"
            app:layout_constraintTop_toBottomOf="@id/entry_date_project"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/entry_name" />


        <TextView
            android:id="@+id/entry_timeInterval_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:timeInterval="@{entry.timeDiff}"
            app:layout_constraintBottom_toBottomOf="@+id/entry_date_project"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/entry_date_project" />

        <ImageView
            android:id="@+id/entry_star_project"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/entry_timeInterval_project"
            app:layout_constraintEnd_toStartOf="@+id/entry_new_project"
            app:layout_constraintTop_toTopOf="@+id/entry_timeInterval_project"
            app:srcCompat="@drawable/ic_baseline_star_24"
            tools:ignore="VectorDrawableCompat"
            app:starMarker="@{entry.marker}"
            android:contentDescription="@string/star_image" />

        <ImageView
            android:id="@+id/entry_new_project"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/entry_timeInterval_project"
            app:layout_constraintEnd_toStartOf="@+id/entry_flag_project"
            app:layout_constraintTop_toTopOf="@+id/entry_timeInterval_project"
            app:srcCompat="@drawable/ic_baseline_fiber_new_24"
            tools:ignore="VectorDrawableCompat"
            app:newMarker="@{entry.marker}"
            android:contentDescription="@string/new_image" />

        <ImageView
            android:id="@+id/entry_flag_project"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/entry_timeInterval_project"
            app:layout_constraintEnd_toStartOf="@+id/entry_timeInterval_project"
            app:layout_constraintTop_toTopOf="@+id/entry_timeInterval_project"
            app:srcCompat="@drawable/ic_baseline_flag_24"
            tools:ignore="VectorDrawableCompat"
            app:flagMarker="@{entry.marker}"
            android:contentDescription="@string/flag_image"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</layout>